# rust-tcpao-proxy

./: .dockerignore  .env.example  .gitignore  COMMERCIAL_LICENSE.md  Cargo.toml  Dockerfile  Makefile  README.md  specs-deployment.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-create.sh  post-start.sh  start-docker.sh
.github/workflows/: publish_gobgp_stunnel_tcpao.yml  publish_gobmp_tls_tcpao.yml
cmd/tcpao-proxy/: main.rs
config/: example.toml
deploy/config/: initiator.toml.tmpl  terminator.toml.tmpl
deploy/containerlab/: tcpao-bmp.clab.yml
deploy/entrypoint/: initiator.sh  terminator.sh
deploy/images/gobgp-stunnel-tcpao/: Dockerfile
deploy/images/gobmp-tls-tcpao/: Dockerfile
docs/: deployment-runbook.md  dev-setup.md
scripts/: doctor.sh  test-validation-tcpao-proxy-bgp-route.sh  test-validation-tcpao-proxy.sh
src/: config.rs  error.rs  forward.rs  lib.rs  metrics.rs  mode_initiator.rs  mode_terminator.rs
src/tcpao/: linux.rs  mod.rs  policy.rs
tests/: functional_tcpao.rs
